# bonch-dsp-faculty

./: .gitignore  README.md
Part1/Convolution/Project/include/: convolve.h  types.h
Part1/Convolution/Project/include/array/: common.h  int16.h
Part1/Convolution/Project/scripts/: dump.ipynb  plot_decimated.py  plot_regular.py  utils.py
Part1/Convolution/Project/source/: convolve.c  main.c
Part1/Convolution/Theory/: material.tex
Part1/Materials/1/: material.tex
Part1/Materials/1/pics/dias/: DDC.drawio
Part1/Materials/2/: material.tex
Part1/Materials/3/: material.tex
Part1/Materials/4/: material.tex
Part1/Materials/5/: material.tex
Part1/Materials/6/: material.tex
Part1/Materials/7/: material.tex
Part1/Projects/Convolution/: CMakeLists.txt  README.md
Part1/Projects/Convolution/data/: 4fsk.npbin
Part1/Projects/Convolution/include/: convolve.h  types.h
Part1/Projects/Convolution/include/array/: 2D.h  float32.h  int8.h  uint8.h
Part1/Projects/Convolution/scripts/: dump.ipynb  plot_2D.py  plot_complex_int.py  plot_decimated.py  plot_regular.py  utils.py
Part1/Projects/Convolution/scripts/.ipynb_checkpoints/: dump-checkpoint.ipynb
Part1/Projects/Convolution/source/: convolve.c  main.c
Part1/Projects/Convolution/source/array/: int16.c  int8.c
Part1/Projects/Queues/: CMakeLists.txt  README.md
Part1/Projects/Search/: CMakeLists.txt  README.md
Part1/Projects/Search/source/: main.c
Part1/Projects/Sort/: CMakeLists.txt  README.md
Part1/Projects/Sort/source/: main.c
Part1/Projects/Tree/: CMakeLists.txt  README.md
Research/: pres.tex
(+17 files in other folders)
